--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "swiper": "^6.1.2",
     "view-design": "^4.3.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-slick-carousel": "^1.0.6",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
